# ESP32-LightManager

./: .gitignore  CMakeLists.txt  esp32ledc.cpp
src/: esp32ledc.cpp  esp32ledc.hpp  esp32ledc_fader.cpp  esp32ledc_fader.hpp  light_drv_ledc.cpp  light_drv_ledc.hpp  light_generics.cpp  light_generics.hpp  light_types.hpp  lightevents.cpp  lightevents.hpp  lightmanager.cpp  lightmanager.hpp  luma_curves.cpp  luma_curves.hpp
